--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </style>
 </head>
 <body>
-    <a href="https://baidu.com">baidu</a>
-    <a href="#C4">disiz</a>
+  
     <article>
     <h1>AI广告法测试</h1>
-    <h2><a name="C4"></a>使用应用-Condition。</a></h2>
+    <p>本次测试为应用-Condition</p>
+    <p>点击右下角蓝色闪电开始使用</p>
     <!-- Your script tag -->
     <script src="https://www.shengu.xyz/js/iframe.js" id="fastgpt-iframe" data-src="https://www.shengu.xyz/chat/share?shareId=q2bauaji60oyl0jn0qta63lp" data-color="#4e83fd"></script>
 
