--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Script Demo</title>
+    <title>堃悟AD Law test</title>
     <style type="text/css">
     body{ background:rgb(29, 29, 29);} 
-    h1{ text-align:center;} 
+    h1{ text-align:center;color: #ffffff;} 
     header{ text-align:center; } 
-    article p{ text-indent:2em; } 
+    article p{ text-indent:2em;} 
+    .text-color{color:rgb(141, 230, 235)}
     footer{ font-size:12px; text-align:center; } 
     </style>
 </head>
@@ -16,12 +17,12 @@
   
     <article>
     <h1>AI广告法测试</h1>
-    <p>本次测试为应用-Condition</p>
-    <p>点击右下角蓝色闪电开始使用</p>
+    <p class="text-color">本次测试为应用-Condition</p>
+    <p class="text-color">点击右下角蓝色闪电开始使用</p>
     <!-- Your script tag -->
     <script src="https://www.shengu.xyz/js/iframe.js" id="fastgpt-iframe" data-src="https://www.shengu.xyz/chat/share?shareId=q2bauaji60oyl0jn0qta63lp" data-color="#4e83fd"></script>
-
-    <!-- You can add more HTML content here if needed -->
     </article>
+    <!-- You can add more HTML content here if needed -->
+    
 </body>
 </html>
